# vecinita

./: .dockerignore  .env.example  .env.local.example  .env.prod.render.example  .env.staging.render.example  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  DATA_MANAGEMENT_SETUP_COMPLETE.md  DEPLOYMENT_IMPLEMENTATION.md  DEPLOYMENT_QUICK_START.md  DEPLOY_DATA_MANAGEMENT_API.md  DEV_STARTUP.md  Dockerfile  ENVIRONMENT_SETUP.md  ENVIRONMENT_SETUP_SUMMARY.md  ENV_VARIABLES_REFERENCE.md  FRONTEND_GATEWAY_FIX_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  Makefile  PHASES_1_TO_5_COMPLETION_REPORT.md  QUICKSTART_DATA_MANAGEMENT_API.md  README.md  RENDER_LOGIN_INSTRUCTIONS.md  SETUP_VERIFICATION.md  SUPABASE_CONFIGURATION.md  TESTING_DOCUMENTATION.md  bp-reportany.json  dev-session.sh  docker-compose.dev.yml  docker-compose.microservices.yml  docker-compose.render-local.yml  docker-compose.render-parity.yml  docker-compose.yml  docs.html  (+17 more)
apps/agent/: Dockerfile  pyproject.toml
apps/chat-rag-backend/: pyproject.toml
apps/data-management-backend/: pyproject.toml
apps/database/: pyproject.toml
apps/embedding-worker/: Makefile  README.md  main.py  pyproject.toml
apps/indexing-worker/: README.md  main.py  pyproject.toml
apps/internal-write-api/: pyproject.toml
apps/vllm-inference/: README.md  main.py  pyproject.toml
auth/: Dockerfile  README.md  pyproject.toml  test-results.local-ci.xml
auth/src/: __init__.py  main.py
auth/tests/: test_main.py
backend/: .coveragerc.unit  .dockerignore  .env.example  .env.test  .gitignore  .prettierignore  Dockerfile  Dockerfile.embedding  Dockerfile.gateway  Makefile  README.md  pyproject.toml  pyrightconfig.json  schema-coverage-gateway-pytest.html  schema-coverage.html  schema-test-results-gateway.xml  schema-test-results.xml  schemathesis.toml  start-all-services.sh  start-services-bg.sh  test-results.xml
backend/docs/: ADMIN_ENDPOINTS_GUIDE.md  DEPENDENCY_UPGRADES_COMPLETE.md  EMBEDDING_ENDPOINTS_GUIDE.md  PHASE4_IMPLEMENTATION_COMPLETE.md  PHASE5_IMPLEMENTATION_COMPLETE.md  SESSION_ISOLATION_GUIDE.md  VECTOR_PERSISTENCE_VALIDATION_PLAN.md
backend/schemathesis-report/: junit-20260412T020742Z.xml  junit-20260412T020804Z.xml  junit-20260418T180101Z.xml  junit-agent-live.xml  junit-agent.xml  junit-gateway.xml  schema-coverage-gateway.html
backend/scripts/: add_admin_helper_functions.sql  add_session_isolation.sql  backfill_language_metadata.py  benchmark_ask_three_day.py  canonicalize_tags.py  check_advisor_health.sql  clean_and_load.py  cron_scraper.sh  data_scrape_load.py  data_scrape_load.sh  deploy_edge_function.ps1  deploy_embedding_gcloud.sh  deploy_modal.sh  evaluate_chat_stream.py  fix_rpc_overload_and_graphql_public_wrapper.sql  manage_embedding_tables.py  migrate_model.py  pre-deploy.sh  render_postgres_parity_check.py  run_migrations.sh  run_schemathesis_live.sh  run_scraper.sh  schema_install.sql  schema_v2_multimodel_views.sql  scrape_analytics.py  start_gateway_render.sh  update_rpc.py  update_rpc_psycopg.py
backend/scripts_local/: test_local_integration.py
backend/src/: config.py  env_deprecation.py  service_endpoints.py
backend/tests/: CLEANUP_REPORT.md  README.md  conftest.py  run_tests.sh  schemathesis_hooks.py  test_agent_deterministic_rag.py  test_agent_embedding_auth_startup.py  test_agent_fastapi_request_validation.py  test_agent_langgraph.py  test_agent_rag_routing.py  test_agent_startup_preflight.py  test_db_search_tool.py  test_docker_compose_embedding_auth.py  test_embedding_service_client.py  test_embedding_service_modal_embeddings.py  test_faq.py  test_generated_gateway_client_import.py  test_postgres_cutover_integration.py  test_render_proxy_url_helpers.py  test_resource_metadata_utils.py  test_rewrite_question_tool.py  test_schemathesis_hooks.py  test_scraper_advanced.py  test_scraper_cli.py  test_scraper_enhancements.py  test_scraper_module.py  test_scraper_upload_chunks.py  test_scraper_uploader_chroma_wiring.py  test_static_response_tool.py  test_supabase_embeddings.py  test_tags_utils.py  test_tracecov_integration_target.py  test_web_search_tool.py
tests/: .env.example  .gitignore  README.md  TEST_UPDATES_API_V1.md  __init__.py  audit_rules.py  bulk_stress_test.sh  conftest.py  corpus_db_lock.py  demo_suite.sh  gemini-isolation.py  logs_cleanup.sh  master_test.sh  pyproject.toml  query_isolation.py  spanish_test.sh  supabase_test.py  test_api_contract.sh  test_rag_fidelity.sh  warm_check.sh  watchdog_monitor.py
tests/bugs/: __init__.py  test_bug_2026_05_20_vllm_shutdown_warnings.py  test_bug_2026_05_21_repetitive_assistant_answer.py  test_bug_2026_05_21_stream_tokens_function_not_callable.py  test_bug_2026_05_22_admin_jobs_401_unauthorized.py  test_bug_2026_05_22_admin_jobs_get_404_not_found.py  test_bug_2026_05_22_chat_cold_start_network_error.py  test_bug_2026_05_22_delete_document_failed_to_fetch.py  test_bug_2026_05_22_modal_data_mgmt_repo_root.py  test_bug_2026_05_22_modal_jobs_failed_to_fetch.py  test_bug_2026_05_25_langdetect_missing_modal_image.py  test_bug_2026_05_25_retag_503_not_configured.py  test_bug_2026_05_25_retag_job_never_completes.py  test_bug_2026_05_25_retag_tag_client_none.py  test_bug_2026_05_25_retag_tags_not_visible.py  test_bug_2026_05_27_modal_embedding_health_404.py  test_bug_2026_06_05_english_query_spanish_corpus.py  test_bug_2026_06_26_get_jobs_405_modal_production.py  test_bug_2026_06_26_ingest_tag_nonjson_fails_job.py  test_bug_2026_06_28_modal_ci_token_auth.py  test_bug_2026_06_30_deploy_preflight_modal_auth_flaky.py  test_bug_2026_06_30_email_test_send_domain_unverified.py  test_bug_2026_07_01_eval_null_judge_metrics.py  test_bug_2026_07_01_eval_run_error_message.py  test_bug_2026_07_05_eval_ollama_models_do_504.py  test_bug_2026_07_05_eval_playground_deploy_husky.py  test_bug_2026_07_05_eval_vllm_rejects_model_id.py  test_bug_2026_07_05_wiki_ci_argparse.py  test_bug_2026_07_05_wiki_ci_push_token.py  test_bug_2026_07_06_ollama_pull_do_503_timeout.py  (+5 more)
tests/docs/: README.md  (+1 more)
(+2468 files in other folders)
