[project]
name = "vecinita"
version = "0.1.0"
description = "Vecinita — bilingual community Q&A RAG + data management"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
    "pip-audit>=2.7",
    "basedpyright>=1.39.6",
    "pytest-asyncio>=0.24",
    "pytest>=8.3",
    "ruff>=0.8",
    "vecinita-chat-rag-backend",
    "vecinita-data-management-backend",
    "vecinita-database",
    "vecinita-embedding-client",
    "vecinita-ingest",
    "vecinita-internal-write-api",
    "vecinita-llm-client",
    "vecinita-tagging",
    "vecinita-rag",
    "vecinita-shared-schemas",
]

[tool.uv]
# CI pip-audit: pin patched releases for transitive vulns (aiohttp via llama-index, pip via uv).
override-dependencies = [
    "aiohttp>=3.14.0",
    "pip>=26.1.2",
]

[tool.uv.workspace]
members = [
    "packages/rag",
    "packages/ingest",
    "packages/embedding-client",
    "packages/llm-client",
    "packages/tagging",
    "packages/shared-schemas",
    "apps/chat-rag-backend",
    "apps/data-management-backend",
    "apps/database",
    "apps/internal-write-api",
]

[tool.uv.sources]
vecinita-rag = { workspace = true }
vecinita-ingest = { workspace = true }
vecinita-embedding-client = { workspace = true }
vecinita-shared-schemas = { workspace = true }
vecinita-chat-rag-backend = { workspace = true }
vecinita-data-management-backend = { workspace = true }
vecinita-database = { workspace = true }
vecinita-internal-write-api = { workspace = true }
vecinita-llm-client = { workspace = true }
vecinita-tagging = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ANN401"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"
markers = [
    "integration: integration tests (may need docker-compose DB)",
    "e2e: end-to-end user journey tests",
    "live: requires deployed staging URLs (VECINITA_STAGING_*); excluded from T0 CI",
    "privacy: privacy schema guardrail tests",
    "unit: fast unit tests without external services",
]
asyncio_mode = "auto"

[tool.basedpyright]
include = ["apps", "packages", "tests"]
exclude = ["**/__pycache__", ".venv", ".pytest_cache", "**/node_modules"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportExplicitAny = "error"
reportAny = "error"
