[project]
name = "vecinita"
version = "0.1.0"
description = "Vecinita — bilingual community Q&A RAG + data management"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
dev = [
    "modal>=1.2.6,<2",
    "httpx>=0.27,<1",
    "httpx2>=2.5.0",
    "pip-audit>=2.7",
    "basedpyright>=1.39.6",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest>=8.3",
    "ruff>=0.8",
    "vecinita-chat-rag-backend",
    "vecinita-data-management-backend",
    "vecinita-database",
    "vecinita-embedding-client",
    "vecinita-ingest",
    "vecinita-internal-write-api",
    "vecinita-llm-client",
    "vecinita-tagging",
    "vecinita-rag",
    "vecinita-shared-schemas",
]

[tool.uv]
# CI pip-audit: pin patched releases for transitive vulns (aiohttp via llama-index, pip via uv).
override-dependencies = [
    "aiohttp>=3.14.1",
    "msgpack>=1.2.1",
    "pip>=26.1.2",
    # Transitive via llama-index-readers-file; pin patched release (CVE-2026-48155/48156).
    "pypdf>=6.13.3",
    "starlette>=1.3.1",
]

[tool.uv.workspace]
members = [
    "packages/rag",
    "packages/ingest",
    "packages/embedding-client",
    "packages/llm-client",
    "packages/tagging",
    "packages/shared-schemas",
    "apps/chat-rag-backend",
    "apps/data-management-backend",
    "apps/database",
    "apps/internal-write-api",
]

[tool.uv.sources]
vecinita-rag = { workspace = true }
vecinita-ingest = { workspace = true }
vecinita-embedding-client = { workspace = true }
vecinita-shared-schemas = { workspace = true }
vecinita-chat-rag-backend = { workspace = true }
vecinita-data-management-backend = { workspace = true }
vecinita-database = { workspace = true }
vecinita-internal-write-api = { workspace = true }
vecinita-llm-client = { workspace = true }
vecinita-tagging = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "packages", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ruff format owns line wrapping / trailing commas. These rules conflict with the
    # formatter and Ruff officially recommends disabling them when `ruff format` is used.
    "E501",   # line-too-long (formatter wraps)
    "COM812", # missing-trailing-comma (formatter owns commas)
    "ISC001", # single-line-implicit-string-concatenation (formatter conflict)
    # Mutually-incompatible docstring rule pairs (Ruff warns if both enabled). Keep D211/D212.
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
# pytest's design is built on bare `assert`; rewriting asserts defeats the framework.
"tests/**" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"
markers = [
    "integration: integration tests (may need docker-compose DB)",
    "e2e: end-to-end user journey tests",
    "live: requires deployed staging URLs (VECINITA_STAGING_*); excluded from T0 CI",
    "privacy: privacy schema guardrail tests",
    "unit: fast unit tests without external services",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # LlamaIndex 0.13.x: upstream Field(validate_default=True) on union/type aliases.
    # Vecinita-owned models are guarded by tests/unit/test_pydantic_field_metadata.py.
    "ignore:The 'validate_default' attribute:pydantic.warnings.UnsupportedFieldAttributeWarning",
]

[tool.coverage.run]
source = [
    "packages/rag/vecinita_rag",
    "packages/ingest/vecinita_ingest",
    "packages/embedding-client/vecinita_embedding_client",
    "packages/llm-client/vecinita_llm_client",
    "packages/tagging/vecinita_tagging",
    "packages/shared-schemas/vecinita_shared_schemas",
    "apps/chat-rag-backend/vecinita_chat_rag_backend",
    "apps/data-management-backend/vecinita_data_management_backend",
    "apps/internal-write-api/vecinita_internal_write_api",
    "apps/database/vecinita_database",
]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "apps/database/alembic/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.basedpyright]
include = ["apps", "packages", "tests"]
exclude = ["**/__pycache__", ".venv", ".pytest_cache", "**/node_modules"]
extraPaths = [".cursor/hooks"]
stubPath = "stubs"
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportExplicitAny = "error"
reportAny = "error"
