[project]
name = "vecinita-auth-service"
version = "0.1.0"
description = "Supabase Authentication Routing for Vecinita"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Vecinita Team"}
]
keywords = ["auth", "supabase", "fastapi", "routing"]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.6.0",
    # Supabase
    "supabase>=2.2.0",
    "gotrue>=2.4.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.26.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx[http2]>=0.26.0",
    "black>=24.4.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-fail-under=98"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.coverage.report]
exclude_lines = [
    "if __name__ == \"__main__\":",
]
