[project]
name = "vecinita"
version = "0.1.0"
description = "Vecinita RAG Q&A Assistant with LangGraph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vecinita Team"}
]
keywords = ["rag", "langgraph", "langchain", "postgres", "fastapi", "ai", "assistant"]

dependencies = [
    # Web Framework
    "fastapi",
    "uvicorn",
    "aiohttp>=3.13.4",
    # LangChain & LangGraph
    "langchain",
    "langchain-community",
    "langchain-core>=1.2.31",
    "langchain-tavily",
    "langchain-text-splitters>=1.1.2",
    "langchain-huggingface",
    "langgraph>=1.1.2",
    "langgraph-checkpoint>=4.0.0",
    # Database & Vector Store
    "psycopg2-binary",
    # Document Processing (lightweight only - playwright/unstructured in scraping extra)
    "beautifulsoup4",
    "pillow>=12.1.1; python_version < '3.13'",
    "pypdf>=6.10.1",
    # Utilities
    "cryptography>=46.0.7",
    "filelock>=3.20.3",
    "python-dotenv>=1.2.2",
    "pydantic",
    "requests>=2.33.0",
    "urllib3>=2.6.3",
    "httpx",
    # Modal SDK: required on Render when MODAL_FUNCTION_INVOCATION is set (embed_query / embed_batch).
    "modal>=1.3.5",
    "python-multipart>=0.0.22",
    "langdetect",
    "tqdm",
    "protobuf>=6.33.5",
    "pygments>=2.20.0",
    "pyjwt>=2.12.0",
    "marshmallow>=3.26.2",
    "orjson>=3.11.6",
    "gotrue>=2.0.0",
    "langchain-ollama>=1.0.0",
    # GuardrailsAI for input/output validation
    "guardrails-ai>=0.5.0",
    "litellm>=1.83.0",
    # LangSmith for tracing and monitoring (now compatible with numpy 2.x)
    "langsmith>=0.6.3",
    # Pin onnxruntime and tokenizers to stable versions to avoid Windows compatibility issues
    # onnxruntime dev releases don't have Windows wheels
    # tokenizers pre-releases require Rust compilation
    "onnxruntime>=1.18.0,<1.24.0.dev; sys_platform == 'win32'",
    "tokenizers>=0.22.0,<0.23.0",
    "ddgs>=9.10.0",
    # Keep optional local embedding fallback available without scraping extras.
    "transformers>=5.0.0rc3",
]

[project.optional-dependencies]
# Agent service dependencies (minimal - no embedding models, calls embedding service via HTTP)
agent = [
    # Agent calls embedding service for embeddings - no local models needed
    # All required dependencies already in base
]

# Embedding service dependencies (lightweight - runs as separate Render service)
embedding = [
    "sentence-transformers>=5.1.2",  # Core embedding model
    "scikit-learn",  # For similarity computations
    "numpy",  # For numerical operations
]

# Scraper service dependencies (heavy - includes embedding models and parsers)
scraper = [
    "unstructured[doc,docx,ppt,pdf]>=0.14.0",
    "playwright>=1.40.0",
    "sentence-transformers>=5.1.2",  # For generating embeddings during scraping
    "fastembed",  # Alternative lightweight embedding model
]

# Docker utilities (only needed for local orchestration scripts)
docker = [
    "docker>=7.0.0",
]

ml = [
    # Optional TensorFlow/Keras stack (pulls large CUDA libs on Linux runners)
    "tf-keras>=2.20.1",
    # Optional torch stack for local experimentation.
    "torch>=2.9.1",
]

# Development: testing, code quality, and experimentation
dev = [
    # Testing Framework
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.0.0",
    "schemathesis>=4.14.3",
    "tracecov>=0.3.0",
    # FastAPI Testing
    "httpx>=0.25.0",
    # Code Quality Tools (pin Black — must match uv.lock; CI uses uv sync --frozen)
    "black==26.3.1",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    # Jupyter for experimentation
    "jupyter>=1.0.0",
    "ipython>=8.20.0",
    # Optional scraping & docker utilities for local development
    "unstructured[doc,docx,ppt,pdf]>=0.14.0",
    "playwright>=1.40.0",
    "docker>=7.0.0",
    "types-requests>=2.32.4.20260324",
]

# Minimal CI dependencies - no playwright or docker for faster CI builds
ci = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.0.0",
    "schemathesis>=4.14.3",
    "tracecov>=0.3.0",
    "types-requests>=2.32.4.20260324",
    "httpx>=0.25.0",
    "black==26.3.1",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

visualization = [
    # For graph visualization
    "graphviz>=0.20.0",
    "pygraphviz>=1.14.0",
]

# All extras for local development
all = [
    "vecinita[dev,scraping,docker,visualization,embedding]",
]

[project.scripts]
vecinita-main = "src.main:main"
vecinita-agent = "src.rag_agent:main"
vecinita-setup = "src.setup_check:main"
vecinita-example = "scripts.example_rag_usage:main"
vecinita-fastapi = "scripts.fastapi_integration_example:main"
vecinita-scrape = "src.services.scraper.cli:main"

[project.urls]
Homepage = "https://github.com/acadiagit/vecinita"
Repository = "https://github.com/acadiagit/vecinita"
Issues = "https://github.com/acadiagit/vecinita/issues"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.pytest.ini_options]
# PyTest configuration for Vecinita tests
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]

# Test discovery patterns
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test output options
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

# Markers for test categorization
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests",
    "schema: OpenAPI / schema conformance tests",
    "ui: UI/API tests using FastAPI TestClient",
    "streaming: Streaming response and SSE behavior tests",
    "slow: Tests that take a long time to run",
    "api: API endpoint tests",
    "auth: Authentication and authorization tests",
    "fallback: Fallback behavior and degraded-mode tests",
    "rate_limit: Rate limiting behavior tests",
    "db: Database related tests",
    "retrieval_quality: Retrieval quality regression and citation fidelity tests",
    "contract: Cross-platform env var and service contract tests (static, no external deps)",
    "render_connectivity: Render-specific service connectivity configuration tests (offline)",
    "live: Live smoke/integration tests against the deployed Render environment (requires RENDER_*_URL secrets)",
]

# Logging
log_cli = false
log_cli_level = "INFO"
log_file = "tests/pytest.log"
log_file_level = "DEBUG"

# Test output
console_output_style = "progress"

# Filter warnings
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::DeprecationWarning:importlib._bootstrap",
]

# TraceCov (schema-level API coverage with Schemathesis): https://schemathesis.readthedocs.io/en/stable/guides/coverage/
# ``tests/integration/conftest.py`` defines ``tracecov_schema`` when only gateway or only agent schema tests are collected.
# Override output path per run via ``pytest --tracecov-report-html-path=...`` when running multiple suites.
tracecov_format = "html,text"
tracecov_report_html_path = "schema-coverage.html"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/api/main.py" = ["E402"]
"src/services/db/security.py" = ["E402"]
"src/test_faq.py" = ["E402"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langchain_core.*",
    "langchain_huggingface.*",
    "langgraph.*",
    "sentence_transformers.*",
    "fastembed.*",
    "unstructured.*",
    "playwright.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.agent.*",
    "src.api.*",
    "src.embedding_service.*",
    "src.services.*",
    "src.test_faq",
]
ignore_errors = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 98
omit = [
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.uv]
# Ensure uv resolves stable versions to avoid Windows compatibility issues
# - onnxruntime dev releases don't have Windows wheels
# - tokenizers pre-releases require Rust compilation
# See: uv.toml for detailed configuration
# Force patched werkzeug (transitive via schemathesis, tensorboard, etc.)
constraint-dependencies = ["werkzeug>=3.1.6"]

[dependency-groups]
