[project]
name = "vecinita-agent"
version = "0.1.0"
description = "Vecinita RAG Agent — LlamaIndex pipeline, conversation management, tool calling, vector search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.23.0",
    "langchain>=0.1.0",
    "langchain-community",
    "langchain-core>=1.3.3",
    "langchain-tavily",
    "langchain-text-splitters",
    "langchain-huggingface",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.1.2",
    "langgraph-checkpoint>=4.0.0",
    "langsmith>=0.6.3",
    "psycopg2-binary>=2.9.9",
    "beautifulsoup4",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31.0",
    "httpx>=0.28.0",
    "langdetect",
    "tqdm",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0",
    "gotrue>=2.0.0",
    "guardrails-ai>=0.5.0",
    "modal>=1.3.5",
    "ddgs>=9.10.0",
    "litellm>=1.83.11",
    "vecinita-common",
    "vecinita-config",
    "vecinita-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
