[project]
name = "vecinita-data-management-backend"
version = "0.1.0"
description = "Data Management Modal ASGI and ingest workers"
requires-python = ">=3.11,<3.12"
dependencies = [
    "vecinita-ingest",
    "vecinita-shared-schemas",
    "vecinita-embedding-client",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vecinita_data_management_backend"]

[tool.uv.sources]
vecinita-ingest = { workspace = true }
vecinita-shared-schemas = { workspace = true }
vecinita-embedding-client = { workspace = true }
