[project]
name = "vecinita-database"
version = "0.1.0"
description = "Alembic migrations, seeds, and privacy tests"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.1,<4",
    "sqlalchemy>=2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vecinita_database"]
