[project]
name = "vecinita-embedding-worker"
version = "0.1.0"
description = "LlamaIndex document embedding worker on Modal GPU"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.3.5",
    "llama-index-core",
    "llama-index-embeddings-huggingface",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
