[project]
name = "vecinita-internal-write-api"
version = "0.1.0"
description = "DO internal write API — sole DATABASE_URL holder for Modal writes"
requires-python = ">=3.11,<3.12"
dependencies = [
    "vecinita-shared-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vecinita_internal_write_api"]

[tool.uv.sources]
vecinita-shared-schemas = { workspace = true }
