[project]
name = "vecinita-internal-write-api"
version = "0.1.0"
description = "DO internal write API — sole DATABASE_URL holder for Modal writes"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.1,<4",
    "uvicorn>=0.30,<1",
    "vecinita-database",
    "vecinita-shared-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vecinita_internal_write_api"]

[tool.uv.sources]
vecinita-shared-schemas = { workspace = true }
vecinita-database = { workspace = true }
