[project]
name = "vecinita-vllm-inference"
version = "0.1.0"
description = "vLLM inference service on Modal with OpenAI-compatible API"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.3.5",
    "vllm>=0.8.0",
    "huggingface_hub[hf_transfer]",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
